package baseline;

public class DataTable {
    void addItem(){
        //get description
        //get due date
        //get complete
        //add data to data table
        //return [][]
    }

    void removeItem(){
        //remove item from data table
    }

    String getItemDescription(){
        //get description from scene
        //temp save and send to addItem
    }

    int getItemDueDate(){
        //get due date from scene
        //temp save and send to addItem
    }

    boolean getItemComplete(){
        //get complete from scene
        //temp save and send to addItem
    }

    void saveDataTable(){
        //copy all info from saved array
        //write all info to text file formatted
    }
}
