package baseline;

public class DataTableManager {
    public Object[][] createDataTable(){
        //new create new instance of dataTable
        //return table pointer
        return;
    }

    public void deleteDataTable(){
        //remove instance of dataTable
    }
}
